refactored estimated arrival time integration test case - 02